--- a/_data/experience.yaml
+++ b/_data/experience.yaml
@@ -14,7 +14,7 @@ experiences:
 - place: "Network Science Institute"
   time: "May 2014 - Feb 2019"
   title: "Ph.D Student"
-  subtitle: "MOBS Lab, Northeastern University"
+  subtitle: "Advisor: Prof. Alessandro Vespignani <br/> MOBS Lab, Northeastern University"
   category: "work"
 
 # - place: "Dept. of Physics, Northeastern University"
