--- a/_data/performances.yaml
+++ b/_data/performances.yaml
@@ -1,7 +1,7 @@
 performances:
 
-- title: "Redmond Library, Redmond, WA"
-  date: "10/12/2019"
+# - title: "Redmond Library, Redmond, WA"
+#   date: "10/12/2019"
 
 - title: "Seattle University, Seattle, WA"
   date: "09/22/2019"
@@ -9,20 +9,20 @@ performances:
 - title: "Jackson Street Jazz Walk, Seattle, WA"
   date: "09/07/2019"
 
-- title: "University Heights, Seattle, WA"
-  date: "09/07/2019"
+# - title: "University Heights, Seattle, WA"
+#   date: "09/07/2019"
 
-- title: "CID Summer Cinema Hing Hay Park, Seattle, WA"
-  date: "08/24/2019"
+# - title: "CID Summer Cinema Hing Hay Park, Seattle, WA"
+#   date: "08/24/2019"
 
 - title: "Belltown Crush, Seattle, WA"
   date: "08/24/2019"
 
-- title: "Sullivan Center Tukwila, Tukwila, WA"
-  date: "08/21/2019"
+# - title: "Sullivan Center Tukwila, Tukwila, WA"
+#   date: "08/21/2019"
 
-- title: "Normandy Park Music in the Park, Normandy, WA"
-  date: "08/11/2019"
+# - title: "Normandy Park Music in the Park, Normandy, WA"
+#   date: "08/11/2019"
 
 - title: "Othello Park International Festival, Othello, WA"
   date: "08/11/2019"
@@ -30,23 +30,23 @@ performances:
 - title: "Seattle Caribbean Festival, Seattle, WA"
   date: "07/28/2019"
 
-- title: "Dance and Splash, Seattle, WA"
-  date: "07/13/2019"
+# - title: "Dance and Splash, Seattle, WA"
+#   date: "07/13/2019"
 
-- title: "Nordstrom's Downtown Seattle, Seattle, WA"
-  date: "07/12/2019"
+# - title: "Nordstrom's Downtown Seattle, Seattle, WA"
+#   date: "07/12/2019"
 
 - title: "Fremont Solstice Parade, Fremont, WA"
   date: "06/22/2019"
 
-- title: "Renton Technical College Commencement, Renton, WA"
-  date: "06/20/2019"
+# - title: "Renton Technical College Commencement, Renton, WA"
+#   date: "06/20/2019"
 
 - title: "Highline College, Des Moines, WA"
   date: "05/23/2019"
 
-- title: "Tulalip Casino and Resort, Tulalip, WA"
-  date: "04/13/2019"
+# - title: "Tulalip Casino and Resort, Tulalip, WA"
+#   date: "04/13/2019"
 
 - title: "Powered By Women, Langston Hughes, Seattle, WA"
   date: "03/30/2019"
