--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -5,5 +5,6 @@ profile_pic: "/assets/profile-pics/dina72-crop.jpg"
 twitter: "https://twitter.com/dinacmistry"
 linkedin: "https://www.linkedin.com/in/dina-mistry78"
 github: "https://github.com/dinacmistry"
+github_2: "https://github.com/DMistry-IDM"
 google_scholar: "https://scholar.google.com/citations?user=D9bxgM4AAAAJ&hl=en"
 google_analystics_tracking_id: 'UA-175168262-1'
