schools and diversify update

--- a/_data/service.yaml
+++ b/_data/service.yaml
@@ -11,7 +11,7 @@ service:
   date: "08/14/2020"
 
 - title: "2nd Annual Diversify NetSci"
-  subtitle: "Co-Organizer, NetSci 2020 Conference"
+  subtitle: "Co-Chair, NetSci 2020 Conference"
   location: "(Virtual) Rome, Italy"
   date: "09/18/2020 - 09/19/2020"
 
@@ -36,7 +36,7 @@ service:
   date: "08/24/2019"
 
 - title: "Inaugural Diversify NetSci"
-  subtitle: "NetSci 2019 Conference"
+  subtitle: "Co-Chair, NetSci 2019 Conference"
   location: "Burlington, Vermont"
   date: "05/28/2019"
 
