--- a/_data/performances.yaml
+++ b/_data/performances.yaml
@@ -1,5 +1,11 @@
 performances:
 
+- title: "Holiday Music in Westlake Park, Seatle, WA"
+  date : "12/12/2021"
+
+- title: "Seattle Waterfront Festival, Seatle, WA"
+  date : "07/10/2021"
+
 # - title: "Redmond Library, Redmond, WA"
 #   date: "10/12/2019"
 
